# Vimprove

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  api.py  cli.py  docker-compose.yml  github-release-tracker.py  ingestion_pipeline.py  justfile  main.py  plugin-list-extractor.py  plugin-schema-example.json  pyproject.toml  readme-chunker.py  sample-readme.md  sample-vimdoc.txt  test-api-response.json  test-cli-response.md  test_release_tracker.py  vim-doc-chunker.py
.github/workflows/: ci.yml
nvim-plugin/: lazy-spec.lua
nvim-plugin/lua/vimprove/: config.lua  init.lua
nvim-plugin/plugin/: vimprove.vim
scripts/: start_server.sh  update_docs.sh
src/: chunk.py  core_doc_fetcher.py  embedding_pipeline.py  error_logger.py  github_release_tracker.py  plugin_doc_fetcher.py  plugin_list_extractor.py  readme-chunker.py  readme_chunker.py  retriever.py  test-release-tracker.py  vim_doc_chunker.py
tests/: test_api.py  test_api_integration.py  test_chunkers.py  test_plugin_extractor.py  test_retriever.py
vimprove-cache/: releases.json
